--- a/YAML/library.yaml
+++ b/YAML/library.yaml
@@ -318,7 +318,13 @@ Inspection Flow Graphs:
      - signal_envelope_usrp_n2xx.py
      - time_sink_usrp_n2xx.py
      - time_sink_1_10_100_usrp_n2xx.py
-     - waterfall_usrp_n2xx.py          
+     - waterfall_usrp_n2xx.py
+     bladeRF 2.0:
+     - instantaneous_frequency_bladerf2.py
+     - signal_envelope_bladerf2.py
+     - time_sink_bladerf2.py
+     - time_sink_1_10_100_bladerf2.py
+     - waterfall_blader2f.py
 Protocols:
      802.11x:
           Attacks:
