--- a/YAML/fissure_config.yaml
+++ b/YAML/fissure_config.yaml
@@ -18,13 +18,13 @@ fft_sample_rate: 1e6
 fft_size: 4096
 fge_hiprfisr_dealer_port: 5053
 fge_pub_port: 5061
-hardware_archive: bladeRF 2.0
-hardware_attack: bladeRF 2.0
-hardware_daughterboard_archive: CBX-120
-hardware_daughterboard_attack: CBX-120
-hardware_daughterboard_iq: CBX-120
-hardware_daughterboard_pd: CBX-120
-hardware_daughterboard_tsi: CBX-120
+hardware_archive: ''
+hardware_attack: ''
+hardware_daughterboard_archive: ''
+hardware_daughterboard_attack: ''
+hardware_daughterboard_iq: ''
+hardware_daughterboard_pd: ''
+hardware_daughterboard_tsi: ''
 hardware_interface_archive: ''
 hardware_interface_attack: ''
 hardware_interface_iq: ''
@@ -35,14 +35,14 @@ hardware_ip_attack: ''
 hardware_ip_iq: ''
 hardware_ip_pd: ''
 hardware_ip_tsi: ''
-hardware_iq: bladeRF 2.0
-hardware_pd: bladeRF 2.0
+hardware_iq: ''
+hardware_pd: ''
 hardware_serial_archive: ''
 hardware_serial_attack: ''
 hardware_serial_iq: ''
 hardware_serial_pd: ''
 hardware_serial_tsi: ''
-hardware_tsi: bladeRF 2.0
+hardware_tsi: ''
 heartbeat_interval: 5
 hiprfisr_pub_port: 5055
 morse_code_amplitude_threshold: 0.5
