--- a/Custom_Blocks/maint-3.8/gr-ainfosec/python/CMakeLists.txt
+++ b/Custom_Blocks/maint-3.8/gr-ainfosec/python/CMakeLists.txt
@@ -35,7 +35,8 @@ GR_PYTHON_INSTALL(
     adsb_encode.py
     UDP_to_Wireshark.py
     UDP_to_Wireshark_Async.py
-    adsb_parser.py DESTINATION ${GR_PYTHON_DIR}/ainfosec
+    adsb_parser.py
+    msg_str_to_PUB.py DESTINATION ${GR_PYTHON_DIR}/ainfosec
 )
 
 ########################################################################
