--- a/YAML/fissure_config.yaml
+++ b/YAML/fissure_config.yaml
@@ -17,13 +17,13 @@ failure_multiple: 5
 fft_size: 8192
 fge_hiprfisr_dealer_port: 5053
 fge_pub_port: 5061
-hardware_archive: USRP X310
-hardware_attack: bladeRF 2.0
-hardware_daughterboard_archive: CBX-120
-hardware_daughterboard_attack: CBX-120
-hardware_daughterboard_iq: CBX-120
-hardware_daughterboard_pd: CBX-120
-hardware_daughterboard_tsi: CBX-120
+hardware_archive: ''
+hardware_attack: ''
+hardware_daughterboard_archive: ''
+hardware_daughterboard_attack: ''
+hardware_daughterboard_iq: ''
+hardware_daughterboard_pd: ''
+hardware_daughterboard_tsi: ''
 hardware_interface_archive: ''
 hardware_interface_attack: ''
 hardware_interface_iq: ''
@@ -34,14 +34,14 @@ hardware_ip_attack: ''
 hardware_ip_iq: ''
 hardware_ip_pd: ''
 hardware_ip_tsi: ''
-hardware_iq: USRP B210
-hardware_pd: LimeSDR
+hardware_iq: ''
+hardware_pd: ''
 hardware_serial_archive: ''
 hardware_serial_attack: ''
 hardware_serial_iq: ''
 hardware_serial_pd: ''
 hardware_serial_tsi: ''
-hardware_tsi: HackRF
+hardware_tsi: ''
 heartbeat_interval: 5
 hiprfisr_pub_port: 5055
 morse_code_amplitude_threshold: 0.5
