--- a/Tools/Gqrx/default.conf
+++ b/Tools/Gqrx/default.conf
@@ -28,18 +28,18 @@ waterfall_min_db=-20
 
 [gui]
 fctl_reset_digits=false
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0J\0\0\0\x1b\0\0\x3S\0\0\x2\xe3\0\0\0J\0\0\0@\0\0\x3S\0\0\x2\xe3\0\0\0\0\0\0\0\0\a\x80\0\0\0J\0\0\0@\0\0\x3S\0\0\x2\xe3)
-state="@ByteArray(\0\0\0\xff\0\0\0\0\xfd\0\0\0\x2\0\0\0\x1\0\0\x1G\0\0\x2Q\xfc\x2\0\0\0\x2\xfc\0\0\0=\0\0\x1k\0\0\x1k\0\b\0\x1c\xfa\0\0\0\x1\x2\0\0\0\x3\xfb\0\0\0\x18\0\x44\0o\0\x63\0k\0I\0n\0p\0u\0t\0\x43\0t\0l\x1\0\0\0\0\xff\xff\xff\xff\0\0\x1\b\0\xff\xff\xff\xfb\0\0\0\x12\0\x44\0o\0\x63\0k\0R\0x\0O\0p\0t\x1\0\0\0\0\xff\xff\xff\xff\0\0\x1N\0\a\xff\xff\xfb\0\0\0\xe\0\x44\0o\0\x63\0k\0\x46\0\x66\0t\x1\0\0\0\0\xff\xff\xff\xff\0\0\0\xc8\0\a\xff\xff\xfc\0\0\x1\xae\0\0\0\xe0\0\0\0\xc3\0\xff\xff\xff\xfa\0\0\0\0\x2\0\0\0\x2\xfb\0\0\0\x12\0\x44\0o\0\x63\0k\0\x41\0u\0\x64\0i\0o\x1\0\0\0\0\xff\xff\xff\xff\0\0\0\xc3\0\xff\xff\xff\xfb\0\0\0\xe\0\x44\0o\0\x63\0k\0R\0\x44\0S\0\0\0\0\0\xff\xff\xff\xff\0\0\0h\0\xff\xff\xff\0\0\0\x3\0\0\0\0\0\0\0\0\xfc\x1\0\0\0\x1\xfb\0\0\0\x1a\0\x44\0o\0\x63\0k\0\x42\0o\0o\0k\0m\0\x61\0r\0k\0s\0\0\0\0\0\xff\xff\xff\xff\0\0\x1\x42\0\xff\xff\xff\0\0\x1\xbd\0\0\x2Q\0\0\0\x1\0\0\0\x2\0\0\0\b\0\0\0\x2\xfc\0\0\0\x1\0\0\0\x2\0\0\0\x1\0\0\0\x16\0m\0\x61\0i\0n\0T\0o\0o\0l\0\x42\0\x61\0r\x1\0\0\0\0\xff\xff\xff\xff\0\0\0\0\0\0\0\0)"
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0J\0\0\0\x1b\0\0\a\x7f\0\0\x4\x37\0\0\0J\0\0\0@\0\0\x3S\0\0\x2\xe3\0\0\0\0\x2\0\0\0\a\x80\0\0\0J\0\0\0@\0\0\a\x7f\0\0\x4\x37)
+state="@ByteArray(\0\0\0\xff\0\0\0\0\xfd\0\0\0\x2\0\0\0\x1\0\0\x1G\0\0\x3\xa5\xfc\x2\0\0\0\x2\xfc\0\0\0=\0\0\x2=\0\0\x1k\0\b\0\x1c\xfa\0\0\0\x1\x2\0\0\0\x3\xfb\0\0\0\x18\0\x44\0o\0\x63\0k\0I\0n\0p\0u\0t\0\x43\0t\0l\x1\0\0\0\0\xff\xff\xff\xff\0\0\x1\b\0\xff\xff\xff\xfb\0\0\0\x12\0\x44\0o\0\x63\0k\0R\0x\0O\0p\0t\x1\0\0\0\0\xff\xff\xff\xff\0\0\x1N\0\a\xff\xff\xfb\0\0\0\xe\0\x44\0o\0\x63\0k\0\x46\0\x66\0t\x1\0\0\0\0\xff\xff\xff\xff\0\0\0\xc8\0\a\xff\xff\xfc\0\0\x2\x80\0\0\x1\x62\0\0\0\xe0\x1\0\0\x1c\xfa\0\0\0\x1\x2\0\0\0\x2\xfb\0\0\0\x12\0\x44\0o\0\x63\0k\0\x41\0u\0\x64\0i\0o\x1\0\0\0\0\xff\xff\xff\xff\0\0\0\xc3\0\xff\xff\xff\xfb\0\0\0\xe\0\x44\0o\0\x63\0k\0R\0\x44\0S\x1\0\0\0\0\xff\xff\xff\xff\0\0\0h\0\xff\xff\xff\0\0\0\x3\0\0\0\0\0\0\0\0\xfc\x1\0\0\0\x1\xfb\0\0\0\x1a\0\x44\0o\0\x63\0k\0\x42\0o\0o\0k\0m\0\x61\0r\0k\0s\0\0\0\0\0\xff\xff\xff\xff\0\0\x1\x42\0\xff\xff\xff\0\0\x5\xe9\0\0\x3\xa5\0\0\0\x1\0\0\0\x2\0\0\0\b\0\0\0\x2\xfc\0\0\0\x1\0\0\0\x2\0\0\0\x1\0\0\0\x16\0m\0\x61\0i\0n\0T\0o\0o\0l\0\x42\0\x61\0r\x1\0\0\0\0\xff\xff\xff\xff\0\0\0\0\0\0\0\0)"
 
 [input]
-device="file='/home/user/FISSURE/IQ Recordings/ZWAVE_Green_916_1MSps.iq',freq=100000000,rate=1000000,repeat=true,throttle=true"
+device="file='/home/laptop1/Desktop/FISSURE_Challenge/challenge18_cropped.iq',freq=100000000,rate=1000000,repeat=true,throttle=true"
 frequency=100000000
 sample_rate=1000000
 
 [receiver]
-demod=Demod Off
-filter_high_cut=5000
-filter_low_cut=-5000
+demod=WFM (mono)
+filter_high_cut=80000
+filter_low_cut=-80000
 
 [remote_control]
 allowed_hosts=::ffff:127.0.0.1
