--- a/.gitmodules
+++ b/.gitmodules
@@ -78,3 +78,7 @@
 	path = Custom_Blocks/maint-3.10/gr-bluetooth
 	url = https://github.com/bkerler/gr-bluetooth
 	branch = maint-3.10
+[submodule "Custom_Blocks/maint-3.10/gr-mixalot"]
+	path = Custom_Blocks/maint-3.10/gr-mixalot
+	url = https://github.com/unsynchronized/gr-mixalot
+	branch = main
