Updating DragonOS FocalX install and adding idea list

--- a/YAML/fissure_config.yaml
+++ b/YAML/fissure_config.yaml
@@ -1,5 +1,5 @@
 SOI_quantity_limit: 5
-SOI_trigger_mode: 0
+SOI_trigger_mode: '0'
 SOI_trigger_time: 0
 SOI_trigger_timeout: 10
 buffer_size_interval: 2
@@ -17,13 +17,13 @@ failure_multiple: 5
 fft_size: 4096
 fge_hiprfisr_dealer_port: 5053
 fge_pub_port: 5061
-hardware_archive: ''
-hardware_attack: ''
-hardware_daughterboard_archive: ''
-hardware_daughterboard_attack: ''
-hardware_daughterboard_iq: ''
-hardware_daughterboard_pd: ''
-hardware_daughterboard_tsi: ''
+hardware_archive: HackRF
+hardware_attack: HackRF
+hardware_daughterboard_archive: CBX-120
+hardware_daughterboard_attack: CBX-120
+hardware_daughterboard_iq: CBX-120
+hardware_daughterboard_pd: CBX-120
+hardware_daughterboard_tsi: CBX-120
 hardware_interface_archive: ''
 hardware_interface_attack: ''
 hardware_interface_iq: ''
@@ -34,14 +34,14 @@ hardware_ip_attack: ''
 hardware_ip_iq: ''
 hardware_ip_pd: ''
 hardware_ip_tsi: ''
-hardware_iq: ''
-hardware_pd: ''
+hardware_iq: HackRF
+hardware_pd: HackRF
 hardware_serial_archive: ''
 hardware_serial_attack: ''
 hardware_serial_iq: ''
 hardware_serial_pd: ''
 hardware_serial_tsi: ''
-hardware_tsi: ''
+hardware_tsi: HackRF
 heartbeat_interval: 5
 hiprfisr_pub_port: 5055
 morse_code_amplitude_threshold: 0.5
