--- a/YAML/fissure_config.yaml
+++ b/YAML/fissure_config.yaml
@@ -1,9 +1,20 @@
 SOI_quantity_limit: 5
-SOI_trigger_mode: '0'
+SOI_trigger_mode: 0
 SOI_trigger_time: 0
 SOI_trigger_timeout: 10
 buffer_size_interval: 2
 clear_log_file_on_startup: true
+color1: '#F4F4F4'
+color2: '#FBFBFB'
+color3: '#17365D'
+color4: '#000000'
+color5: '#FFFFFF'
+color_mode: Light Mode
+custom_color1: '#121212'
+custom_color2: '#292929'
+custom_color3: '#2D6300'
+custom_color4: '#CCCCCC'
+custom_color5: '#444444'
 dashboard_hiprfisr_dealer_port: 5051
 dashboard_pub_port: 5057
 dataset_freq_shift_max: 0
