--- a/YAML/fissure_config.yaml
+++ b/YAML/fissure_config.yaml
@@ -4,17 +4,17 @@ SOI_trigger_time: 0
 SOI_trigger_timeout: 10
 buffer_size_interval: 2
 clear_log_file_on_startup: true
-color1: '#F4F4F4'
-color2: '#FBFBFB'
-color3: '#17365D'
-color4: '#000000'
-color5: '#FFFFFF'
-color_mode: Light Mode
-custom_color1: '#121212'
-custom_color2: '#292929'
-custom_color3: '#2D6300'
-custom_color4: '#CCCCCC'
-custom_color5: '#444444'
+color1: '#84B737'
+color2: '#58C49F'
+color3: '#EADA8D'
+color4: '#29845B'
+color5: '#7E3E7B'
+color_mode: Custom Mode
+custom_color1: '#84B737'
+custom_color2: '#58C49F'
+custom_color3: '#EADA8D'
+custom_color4: '#29845B'
+custom_color5: '#7E3E7B'
 dashboard_hiprfisr_dealer_port: 5051
 dashboard_pub_port: 5057
 dataset_freq_shift_max: 10000
