Additional color options

--- a/YAML/User Configs/default.yaml
+++ b/YAML/User Configs/default.yaml
@@ -78,9 +78,21 @@ custom_color2: '#292929'
 custom_color3: '#2D6300'
 custom_color4: '#CCCCCC'
 custom_color5: '#444444'
+custom_color6: '#AAAAAA'
+custom_color7: '#666666'
+custom_color8: '#DDDDDD'
+custom_color9: '#999999'
+custom_color10: '#AFAFAF'
+custom_color11: '#6F6F6F'
 color1: '#F4F4F4'
 color2: '#FBFBFB'
 color3: '#17365D'
 color4: '#000000'
 color5: '#FFFFFF'
+color6: '#FEFEFE'
+color7: '#EFEFEF'
+color8: '#FEFEFE'
+color9: '#EFEFEF'
+color10: '#FEFEFE'
+color11: '#F8F8F8'
 color_mode: 'Light Mode'
