Additional color options

--- a/YAML/fissure_config.yaml
+++ b/YAML/fissure_config.yaml
@@ -1,20 +1,32 @@
 SOI_quantity_limit: 5
-SOI_trigger_mode: 0
+SOI_trigger_mode: '0'
 SOI_trigger_time: 0
 SOI_trigger_timeout: 10
 buffer_size_interval: 2
 clear_log_file_on_startup: true
 color1: '#F4F4F4'
+color10: '#FEFEFE'
+color11: '#F8F8F8'
 color2: '#FBFBFB'
 color3: '#17365D'
 color4: '#000000'
 color5: '#FFFFFF'
+color6: '#FEFEFE'
+color7: '#EFEFEF'
+color8: '#FEFEFE'
+color9: '#EFEFEF'
 color_mode: Light Mode
 custom_color1: '#121212'
+custom_color10: '#AFAFAF'
+custom_color11: '#6F6F6F'
 custom_color2: '#292929'
 custom_color3: '#2D6300'
 custom_color4: '#CCCCCC'
 custom_color5: '#444444'
+custom_color6: '#AAAAAA'
+custom_color7: '#666666'
+custom_color8: '#DDDDDD'
+custom_color9: '#999999'
 dashboard_hiprfisr_dealer_port: 5051
 dashboard_pub_port: 5057
 dataset_freq_shift_max: 10000
