Miscellaneous style updates

--- a/YAML/User Configs/default.yaml
+++ b/YAML/User Configs/default.yaml
@@ -84,6 +84,9 @@ custom_color8: '#DDDDDD'
 custom_color9: '#999999'
 custom_color10: '#AFAFAF'
 custom_color11: '#6F6F6F'
+custom_color12: '#000000'
+custom_color13: '#666666'
+custom_icon_style: 'Dark'
 color1: '#F4F4F4'
 color2: '#FBFBFB'
 color3: '#17365D'
@@ -95,5 +98,7 @@ color8: '#FEFEFE'
 color9: '#EFEFEF'
 color10: '#FEFEFE'
 color11: '#F8F8F8'
+color12: '#000000'
+color13: '#C0C0C0'
+icon_style: 'Light'
 color_mode: 'Light Mode'
-
