Removing old dashboard.py copy

--- a/YAML/fissure_config.yaml
+++ b/YAML/fissure_config.yaml
@@ -1,9 +1,9 @@
-SOI_quantity_limit: 5
+SOI_quantity_limit: '5'
 SOI_trigger_mode: '0'
-SOI_trigger_time: 0
-SOI_trigger_timeout: 10
-buffer_size_interval: 2
-clear_log_file_on_startup: true
+SOI_trigger_time: '0'
+SOI_trigger_timeout: '10'
+buffer_size_interval: '2'
+clear_log_file_on_startup: 'True'
 color1: '#F4F4F4'
 color10: '#FEFEFE'
 color11: '#F8F8F8'
@@ -32,16 +32,16 @@ custom_color7: '#666666'
 custom_color8: '#DDDDDD'
 custom_color9: '#999999'
 custom_icon_style: Dark
-dashboard_hiprfisr_dealer_port: 5051
-dashboard_pub_port: 5057
-dataset_freq_shift_max: 0
-dataset_freq_shift_min: 0
-dataset_noise_max: 0.1
-dataset_noise_min: 0
-dataset_phase_rot_max: 0.1
-dataset_phase_rot_min: 0
-dataset_scale_max: 1
-dataset_scale_min: 0.2
+dashboard_hiprfisr_dealer_port: '5051'
+dashboard_pub_port: '5057'
+dataset_freq_shift_max: '0'
+dataset_freq_shift_min: '0'
+dataset_noise_max: '0.1'
+dataset_noise_min: '0'
+dataset_phase_rot_max: '0.1'
+dataset_phase_rot_min: '0'
+dataset_scale_max: '1'
+dataset_scale_min: '0.2'
 disabled_running_flow_graph_variables:
 - ip_address
 - tx_usrp_channel
@@ -49,10 +49,10 @@ disabled_running_flow_graph_variables:
 - tx_usrp_antenna
 - rx_usrp_antenna
 - filepath
-failure_multiple: 5
-fft_size: 8192
-fge_hiprfisr_dealer_port: 5053
-fge_pub_port: 5061
+failure_multiple: '5'
+fft_size: '8192'
+fge_hiprfisr_dealer_port: '5053'
+fge_pub_port: '5061'
 hardware_archive: ''
 hardware_attack: ''
 hardware_daughterboard_archive: ''
@@ -78,23 +78,23 @@ hardware_serial_iq: ''
 hardware_serial_pd: ''
 hardware_serial_tsi: ''
 hardware_tsi: ''
-heartbeat_interval: 5
-hiprfisr_pub_port: 5055
+heartbeat_interval: '5'
+hiprfisr_pub_port: '5055'
 icon_style: Light
-morse_code_amplitude_threshold: 0.5
-morse_code_between_letter_spacing: 3
-morse_code_between_word_spacing: 7
-morse_code_error_tolerance: 0.05
-morse_code_same_letter_spacing: 1
-moving_avg_points: 5
-pd_bits_port: 5066
-pd_hiprfisr_dealer_port: 5054
-pd_pub_port: 5063
+morse_code_amplitude_threshold: '0.5'
+morse_code_between_letter_spacing: '1.96'
+morse_code_between_word_spacing: '5.92'
+morse_code_error_tolerance: '0.1'
+morse_code_same_letter_spacing: '1'
+moving_avg_points: '5'
+pd_bits_port: '5066'
+pd_hiprfisr_dealer_port: '5054'
+pd_pub_port: '5063'
 process_SOIs: 'False'
 remember_configuration: 'False'
 startup_automation_mode: Manual
 target_SOI: 0
-tsi_hiprfisr_dealer_port: 5052
-tsi_pub_port: 5059
-tsi_pub_port_classification: 5065
-tsi_pub_port_id: 5060
+tsi_hiprfisr_dealer_port: '5052'
+tsi_pub_port: '5059'
+tsi_pub_port_classification: '5065'
+tsi_pub_port_id: '5060'
