--- a/YAML/tsi.yaml
+++ b/YAML/tsi.yaml
@@ -42,6 +42,8 @@ Commands:
      - Stop TSI Detector
      - Start TSI Conditioner
      - Stop TSI Conditioner
+     - Start TSI FE
+     - Stop TSI FE
      - Start IQ Recording
      - Add Blacklist
      - Remove Blacklist
@@ -56,6 +58,8 @@ Start TSI Detector: startTSI_Detector
 Stop TSI Detector: stopTSI_Detector
 Start TSI Conditioner: startTSI_Conditioner
 Stop TSI Conditioner: stopTSI_Conditioner
+Start TSI FE: startTSI_FE
+Stop TSI FE: stopTSI_FE
 Start IQ Recording: startIQ_Recording
 Add Blacklist: addBlacklist
 Remove Blacklist: removeBlacklist
@@ -85,6 +89,16 @@ startTSI_Conditioner:
              method_parameter_values
      
 stopTSI_Conditioner:
+    Type: callback
+    Parameters:
+    
+startTSI_FE:
+    Type: callback
+    Parameters:
+             common_parameter_names
+             common_parameter_values
+     
+stopTSI_FE:
     Type: callback
     Parameters:
 
