--- a/YAML/fissure_config.yaml
+++ b/YAML/fissure_config.yaml
@@ -53,13 +53,13 @@ failure_multiple: 5
 fft_size: 8192
 fge_hiprfisr_dealer_port: 5053
 fge_pub_port: 5061
-hardware_archive: ''
-hardware_attack: ''
-hardware_daughterboard_archive: ''
-hardware_daughterboard_attack: ''
-hardware_daughterboard_iq: ''
-hardware_daughterboard_pd: ''
-hardware_daughterboard_tsi: ''
+hardware_archive: USRP B2x0
+hardware_attack: USRP B2x0
+hardware_daughterboard_archive: CBX-120
+hardware_daughterboard_attack: CBX-120
+hardware_daughterboard_iq: CBX-120
+hardware_daughterboard_pd: CBX-120
+hardware_daughterboard_tsi: CBX-120
 hardware_interface_archive: ''
 hardware_interface_attack: ''
 hardware_interface_iq: ''
@@ -70,14 +70,14 @@ hardware_ip_attack: ''
 hardware_ip_iq: ''
 hardware_ip_pd: ''
 hardware_ip_tsi: ''
-hardware_iq: ''
-hardware_pd: ''
+hardware_iq: USRP B2x0
+hardware_pd: USRP B2x0
 hardware_serial_archive: ''
 hardware_serial_attack: ''
 hardware_serial_iq: ''
 hardware_serial_pd: ''
 hardware_serial_tsi: ''
-hardware_tsi: ''
+hardware_tsi: USRP B2x0
 heartbeat_interval: 5
 hiprfisr_pub_port: 5055
 icon_style: Light
