2023 FISSURE Challenge announcement

--- a/Tools/Gqrx/default.conf
+++ b/Tools/Gqrx/default.conf
@@ -3,7 +3,7 @@ configversion=2
 crashed=false
 
 [audio]
-gain=500
+gain=-200
 pandapter_min_db=0
 rec_dir=
 udp_host=localhost
@@ -11,6 +11,9 @@ udp_port=65535
 waterfall_min_db=0
 
 [fft]
+averaging=100
+fft_rate=60
+fft_size=65536
 fft_window=0
 pandapter_fill=false
 pandapter_min_db=0
@@ -19,21 +22,18 @@ waterfall_min_db=0
 
 [gui]
 fctl_reset_digits=false
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0H\0\0\x4\x38\0\0\a\x7f\0\0\bo\0\0\x2\x31\0\0\x5\xb8\0\0\x5\x10\0\0\bC\0\0\0\x2\x2\0\0\0\a\x80\0\0\0H\0\0\x4]\0\0\a\x7f\0\0\bo)
-state="@ByteArray(\0\0\0\xff\0\0\0\0\xfd\0\0\0\x2\0\0\0\x1\0\0\x1\x1d\0\0\x3\xc0\xfc\x2\0\0\0\x2\xfc\0\0\0=\0\0\x2g\0\0\x1k\0\b\0\x1c\xfa\0\0\0\x1\x2\0\0\0\x3\xfb\0\0\0\x18\0\x44\0o\0\x63\0k\0I\0n\0p\0u\0t\0\x43\0t\0l\x1\0\0\0\0\xff\xff\xff\xff\0\0\0\xf3\0\xff\xff\xff\xfb\0\0\0\x12\0\x44\0o\0\x63\0k\0R\0x\0O\0p\0t\x1\0\0\0\0\xff\xff\xff\xff\0\0\x1N\0\a\xff\xff\xfb\0\0\0\xe\0\x44\0o\0\x63\0k\0\x46\0\x66\0t\x1\0\0\0\0\xff\xff\xff\xff\0\0\0\xc8\0\a\xff\xff\xfc\0\0\x2\xaa\0\0\x1S\0\0\0\xc8\0\xff\xff\xff\xfa\0\0\0\0\x2\0\0\0\x2\xfb\0\0\0\x12\0\x44\0o\0\x63\0k\0\x41\0u\0\x64\0i\0o\x1\0\0\0\0\xff\xff\xff\xff\0\0\0\xc8\0\xff\xff\xff\xfb\0\0\0\xe\0\x44\0o\0\x63\0k\0R\0\x44\0S\0\0\0\0\0\xff\xff\xff\xff\0\0\0h\0\xff\xff\xff\0\0\0\x3\0\0\0\0\0\0\0\0\xfc\x1\0\0\0\x1\xfb\0\0\0\x1a\0\x44\0o\0\x63\0k\0\x42\0o\0o\0k\0m\0\x61\0r\0k\0s\0\0\0\0\0\xff\xff\xff\xff\0\0\x1\x42\0\xff\xff\xff\0\0\x6\x15\0\0\x3\xc0\0\0\0\x1\0\0\0\x2\0\0\0\b\0\0\0\x2\xfc\0\0\0\x1\0\0\0\x2\0\0\0\x1\0\0\0\x16\0m\0\x61\0i\0n\0T\0o\0o\0l\0\x42\0\x61\0r\x1\0\0\0\0\xff\xff\xff\xff\0\0\0\0\0\0\0\0)"
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0H\0\0\x4S\0\0\a\x7f\0\0\bo\0\0\0H\0\0\x4x\0\0\x3'\0\0\a\x3\0\0\0\0\x2\0\0\0\a\x80\0\0\0H\0\0\x4x\0\0\a\x7f\0\0\bo)
+state="@ByteArray(\0\0\0\xff\0\0\0\0\xfd\0\0\0\x2\0\0\0\x1\0\0\x1\x1d\0\0\x3\xa5\xfc\x2\0\0\0\x2\xfc\0\0\0=\0\0\x2V\0\0\x1k\0\b\0\x1c\xfa\0\0\0\x2\x2\0\0\0\x3\xfb\0\0\0\x18\0\x44\0o\0\x63\0k\0I\0n\0p\0u\0t\0\x43\0t\0l\x1\0\0\0\0\xff\xff\xff\xff\0\0\0\xf3\0\xff\xff\xff\xfb\0\0\0\x12\0\x44\0o\0\x63\0k\0R\0x\0O\0p\0t\x1\0\0\0\0\xff\xff\xff\xff\0\0\x1N\0\a\xff\xff\xfb\0\0\0\xe\0\x44\0o\0\x63\0k\0\x46\0\x66\0t\x1\0\0\0\0\xff\xff\xff\xff\0\0\0\xc8\0\a\xff\xff\xfc\0\0\x2\x99\0\0\x1I\0\0\0\xc8\0\xff\xff\xff\xfa\0\0\0\0\x2\0\0\0\x2\xfb\0\0\0\x12\0\x44\0o\0\x63\0k\0\x41\0u\0\x64\0i\0o\x1\0\0\0\0\xff\xff\xff\xff\0\0\0\xc8\0\xff\xff\xff\xfb\0\0\0\xe\0\x44\0o\0\x63\0k\0R\0\x44\0S\0\0\0\0\0\xff\xff\xff\xff\0\0\0h\0\xff\xff\xff\0\0\0\x3\0\0\0\0\0\0\0\0\xfc\x1\0\0\0\x1\xfb\0\0\0\x1a\0\x44\0o\0\x63\0k\0\x42\0o\0o\0k\0m\0\x61\0r\0k\0s\0\0\0\0\0\xff\xff\xff\xff\0\0\x1\x42\0\xff\xff\xff\0\0\x6\x15\0\0\x3\xa5\0\0\0\x1\0\0\0\x2\0\0\0\b\0\0\0\x2\xfc\0\0\0\x1\0\0\0\x2\0\0\0\x1\0\0\0\x16\0m\0\x61\0i\0n\0T\0o\0o\0l\0\x42\0\x61\0r\x1\0\0\0\0\xff\xff\xff\xff\0\0\0\0\0\0\0\0)"
 
 [input]
-device="file='/home/user/DEFCON31/data/ham_sstv_cropped.iq',freq=467750000,rate=96000,repeat=true,throttle=true"
-frequency=497752000
-sample_rate=96000
+device="file='/home/user/Documents/FISSURE_Challenge/challenge7.iq',freq=300000000,rate=10000000,repeat=true,throttle=true"
+frequency=300000000
+sample_rate=10000000
 
 [receiver]
-agc_decay=100
-agc_off=true
-demod=6
-filter_high_cut=-100
-filter_low_cut=-2800
-offset=19000
+demod=0
+filter_high_cut=5000
+filter_low_cut=-5000
 
 [remote_control]
 allowed_hosts=::ffff:127.0.0.1
