--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,22 @@
 # Common FISSURE Files
-*.pyc
 routersploit.log
+Logs/event.log
+certificates/
 
 
 
 # MacOS Files
 .DS_Store
 
+# Python Files
+*.pyc
+**/__pycache/
+.coverage
+
 # VS Code Files
 .vscode
 
 # Other 
 .env  # Some currently unused env files, but often contains secrets, so better be safe than sorry
+.venv
 env.py
